--- a/style.css
+++ b/style.css
@@ -245,8 +245,7 @@ header{
 footer{
     width: 100%;
     height: auto;
-    padding-top: 5% ;
-    padding-bottom: 2%;
+    padding:2% 3% 2% 3% ;
     background-color:var(--color-footer);
     color: #f1efef;
     display: flex;
@@ -256,15 +255,28 @@ footer{
 }
 
 footer .contacto{
-    width: 400px;
-    margin: 0 4%;
+    width: 25%;
+    /*margin: 0 4%;*/
+    min-width: 300px;
 }
 
 footer .redes{
-    width: 300px;
+    width: 30%;
     text-align: center;
-    margin: 5% 0;
+    /*margin: 5% 0;*/
+    min-width: 300px;
     
+}
+
+footer .logo{
+    width: 30%;
+    height: auto;
+    min-width: 200px;
+}
+
+footer img{
+    width: 100%;
+    height: 100%;
 }
 
 footer .contacto div{
@@ -276,8 +288,7 @@ footer .contacto div{
 footer i{
     font-size: 30px;
     margin-right: 15px;
-
-            
+          
     /*-color: var(--nav_color);*/
     color:white;
 
@@ -299,9 +310,42 @@ footer .redes a{
     color: inherit;
 }
 
-footer a:hover{
+footer i:hover{
     color: var(--nav_color);
 }
+
+
+/*Suscripción*/
+.suscribirse{
+    width: 100%;
+    font-size: 25px;
+    padding: 5%;
+}
+
+.suscribirse input{
+    width: 100%;
+    border: 0;
+    height: 25px;
+    background-color: #f1efef;
+}
+
+.suscribirse input:last-child{
+    width: 40%;
+    height: 30px;
+    margin: 4% 0;
+    background-color: transparent;
+    color: inherit;
+    border: 1px solid white;
+    border-radius: 20px 20px 20px 20px;
+    cursor: pointer;
+}
+
+.suscribirse input:last-child:hover{
+    color: var(--nav_color);
+    border-color: var(--nav_color);
+}  
+
+
 
 /*Whatsapp*/
 .ws{
