--- a/style.css
+++ b/style.css
@@ -1,82 +1,84 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html,body{
+html,
+body {
     width: 100%;
-    height:100vh;
+    height: 100vh;
 }
 
-header{
+header {
     width: 100%;
     height: 90%;
     position: relative;
 }
 
 
-:root{
+:root {
     /*variables del nav*/
-    --nav_size:100px;
+    --nav_size: 100px;
     --nav_color: #f67d92;
     --nav_color_scroll: rgb(92, 154, 196);
     --nav_color_enlaces: white;
-    --nav_font_size:20px;
-     /*variables slider (flechas)*/
-     --color_flecha:rgba(255, 255, 255, 0.466);
-     --color_flecha_fondo:rgba(255, 255, 255, 0.192);
-     --color_flecha_hover:rgba(255, 255, 255, 0.61);
-     --color_flecha_fondo_hover:rgba(255, 255, 255, 0.466);
-     --borde_flechas:50%;
+    --nav_font_size: 20px;
+    /*variables slider (flechas)*/
+    --color_flecha: rgba(255, 255, 255, 0.466);
+    --color_flecha_fondo: rgba(255, 255, 255, 0.192);
+    --color_flecha_hover: rgba(255, 255, 255, 0.61);
+    --color_flecha_fondo_hover: rgba(255, 255, 255, 0.466);
+    --borde_flechas: 50%;
 
-     --color-footer: #2c2c2ce5;
- 
-    
+    --color-footer: #2c2c2ce5;
+
+
 }
 
 /*Estilos del nav*/
-.nav_container{
+.nav_container {
     /*position: fixed; /*Si se desea fijo en la parte superior*/
-    top: 0;/**/
+    /*top: 0;*/
+    /**/
     width: 100%;
     height: var(--nav_size);
     font-size: var(--nav_font_size);
-    background-color: var(--nav_color) ;
+    background-color: var(--nav_color);
     padding: 0 2%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+
 }
 
-.nav_container2{
-    background-color: var(--nav_color_scroll) ;
-   
+.nav_container2 {
+    background-color: var(--nav_color_scroll);
+
 }
 
-.nav_logo{
+.nav_logo {
     height: 95%;
     width: 9%;
     min-width: 100px;
 }
 
-.nav_logo img{
+.nav_logo img {
     width: 100%;
     height: 100%;
 }
 
-.nav_enlaces{
+.nav_enlaces {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 25%;
     min-width: 450px;
     height: 100%;
-    
+
 }
 
-.nav_enlace{
+.nav_enlace {
     margin-left: 1%;
     padding-bottom: 4%;
     height: 100%;
@@ -84,67 +86,68 @@ header{
     justify-content: space-around;
     align-items: flex-end;
     cursor: pointer;
-    
-   
+
+
 }
 
-.nav_enlace a{
+.nav_enlace a {
     text-decoration: none;
     color: var(--nav_color_enlaces);
 }
 
 .nav_enlace:hover,
-.actual{
-    
+.actual {
+
     border-bottom: 4px solid var(--nav_color_enlaces);
-    
+
 }
+
 .hamburguesa {
     display: none;
     font-size: 50px;
     text-align: center;
     color: var(--nav_color_enlaces);
     cursor: pointer;
-    
+
 }
 
 /*Estilos del slider*/
-.slider_container{
+.slider_container {
     width: 100%;
-    height: 85%;
+    height:  calc(100% - 100px);
     overflow: hidden;
     position: relative;
-    
- 
+
+
 }
 
-.slider_imagenes{
+.slider_imagenes {
     width: 100%;
     height: 100%;
     display: flex;
 
 }
 
-.slider_img{
+.slider_img {
     width: 100%;
     height: 100%;
     display: inline-block;
     flex-shrink: 0;
     object-fit: cover;
-    
+
 }
 
-.slider_img img{
+.slider_img img {
     width: 100%;
     height: 100%;
-    
-    
-    
+
+
+
 }
 
 
 /*FLECHAS*/
-.flechas{
+.flechas {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -157,10 +160,10 @@ header{
 }
 
 .slider_prev,
-.slider_next{
+.slider_next {
     width: 70px;
     height: 70px;
-    color: var(--color_flecha); 
+    color: var(--color_flecha);
     font-size: 65px;
     cursor: pointer;
     background-color: var(--color_flecha_fondo);
@@ -169,84 +172,89 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
 }
 
 .slider_prev:hover,
-.slider_next:hover{
-    color: var(--color_flecha_hover); 
+.slider_next:hover {
+    color: var(--color_flecha_hover);
     background-color: var(--color_flecha_fondo_hover);
 
 }
 
 
 /*Sección de productos*/
-.productos{
+.productos {
     width: 100%;
     height: auto;
+    
 
 }
 
-.articulo{
+.articulo {
     width: 100%;
     height: 100%;
 
 }
 
-.articulo h1{
+.articulo h1 {
     text-align: center;
     background-color: var(--nav_color);
     color: white;
     padding: 8px 0;
+    position: sticky;
+    top: 0;
     
+
 }
 
-.cards{
-   width: 100%;
-   height:auto;
-   display: flex;
-   justify-content: space-around;
-   flex-wrap: wrap;
-   padding:30px 0;
-   background-color: #f1efef;
-   gap: 30px;
-   
-   
+.cards {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 30px 0;
+    background-color: #f1efef;
+    gap: 30px;
+
+
 }
 
-.card{
+.card {
     width: 240px;
     height: 300px;
     flex-shrink: 1;
     background-color: white;
     cursor: pointer;
-    
-   
+
+
 }
 
-.card img{
+.card img {
     width: 100%;
     height: 90%;
 
 }
 
-.card h3{
+.card h3 {
     text-align: center;
     height: 10%;
 
 }
 
-.card:hover{
-    box-shadow:10px 5px 10px  rgba(161, 161, 161, 0.788) ;
+.card:hover {
+    box-shadow: 10px 5px 10px rgba(161, 161, 161, 0.788);
 }
 
 
+
 /*Footer*/
-footer{
+footer {
     width: 100%;
     height: auto;
-    padding:2% 3% 2% 3% ;
-    background-color:var(--color-footer);
+    padding: 2% 3% 2% 3%;
+    background-color: var(--color-footer);
     color: #f1efef;
     display: flex;
     justify-content: space-evenly;
@@ -254,82 +262,82 @@ footer{
     flex-wrap: wrap;
 }
 
-footer .contacto{
+footer .contacto {
     width: 25%;
     /*margin: 0 4%;*/
     min-width: 300px;
 }
 
-footer .redes{
+footer .redes {
     width: 30%;
     text-align: center;
     /*margin: 5% 0;*/
     min-width: 300px;
-    
+
 }
 
-footer .logo{
+footer .logo {
     width: 30%;
     height: auto;
     min-width: 200px;
 }
 
-footer img{
+footer img {
     width: 100%;
     height: 100%;
 }
 
-footer .contacto div{
+footer .contacto div {
     margin-bottom: 7%;
     font-size: 25px;
-  
+
 }
 
-footer i{
+footer i {
     font-size: 30px;
     margin-right: 15px;
-          
+
     /*-color: var(--nav_color);*/
-    color:white;
+    color: white;
 
 }
 
-footer .redes a{
+footer .redes a {
     text-decoration: none;
     color: inherit;
 }
 
-#copyright{
+#copyright {
     width: 100%;
     text-align: center;
     padding-top: 3%;
     font-size: 15px;
 }
 
-#copyright a{
+#copyright a {
     color: inherit;
 }
 
-footer i:hover{
+footer i:hover {
     color: var(--nav_color);
 }
 
 
 /*Suscripción*/
-.suscribirse{
+.suscribirse {
     width: 100%;
     font-size: 25px;
     padding: 5%;
 }
 
-.suscribirse input{
+.suscribirse input {
     width: 100%;
     border: 0;
     height: 25px;
     background-color: #f1efef;
 }
 
-.suscribirse input:last-child{
+.suscribirse input:last-child {
     width: 40%;
     height: 30px;
     margin: 4% 0;
@@ -340,15 +348,15 @@ footer i:hover{
     cursor: pointer;
 }
 
-.suscribirse input:last-child:hover{
+.suscribirse input:last-child:hover {
     color: var(--nav_color);
     border-color: var(--nav_color);
-}  
+}
 
 
 
 /*Whatsapp*/
-.ws{
+.ws {
     position: fixed;
     bottom: 20px;
     right: 20px;
@@ -356,10 +364,10 @@ footer i:hover{
     color: white;
 }
 
-.ws a{
+.ws a {
     color: inherit;
     text-decoration: none;
-    background-color: #00bb2d ;
+    background-color: #00bb2d;
     padding: 10px;
     border-radius: 50%;
 }
@@ -367,14 +375,15 @@ footer i:hover{
 
 /*Slide-productos*/
 
-.centrar{
+.centrar {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 20px;
 }
-.slide-producto{
+
+.slide-producto {
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -385,11 +394,11 @@ footer i:hover{
 
 }
 
-.slide-producto p{
-    padding: 0 5% ;
+.slide-producto p {
+    padding: 0 5%;
 }
 
-.slide-producto i:first-child{
+.slide-producto i:first-child {
     position: fixed;
     top: 1%;
     right: 2%;
@@ -400,42 +409,43 @@ footer i:hover{
 
 }
 
-.slide-producto .container{
-   
+.slide-producto .container {
+
     width: 95%;
     height: 95%;
     background-color: white;
     position: relative;
-    
-    
-    
+
+
+
 }
 
-.aparecer{
+.aparecer {
     transform: scale(1);
 }
 
-.producto-slide{
+.producto-slide {
     width: 80%;
     height: 60%;
-    box-shadow:10px 5px 10px  rgba(161, 161, 161, 0.788) ;
-    
+    box-shadow: 10px 5px 10px rgba(161, 161, 161, 0.788);
+
 }
 
-.slider_img_pro{
+.slider_img_pro {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.producto-slide img{
+
+.producto-slide img {
     width: 100%;
     height: 100%;
-   
-    
+
+
 }
 
 /*miniatura de imagenes*/
-.indicadores{
+.indicadores {
     width: 100%;
     height: 10%;
     /*position: absolute;
@@ -446,22 +456,22 @@ footer i:hover{
     margin-top: 2%;
 }
 
-.indicador{
+.indicador {
     cursor: pointer;
     width: 9%;
     height: 100%;
     background-size: cover;
     display: none;
-    
+
 }
 
-.indicador_actual{
+.indicador_actual {
     border: 3px solid var(--nav_color);
-    
+
 }
 
-@media (max-width: 650px){
-    .nav_enlaces{
+@media (max-width: 650px) {
+    .nav_enlaces {
         flex-direction: column;
         width: 100%;
         height: 60vh;
@@ -475,25 +485,25 @@ footer i:hover{
         transition: ease-in-out 1s;
         display: none;
         z-index: 200;
-        
-        
-        
+
+
+
     }
 
-    .nav_enlaces2{
-        display:flex ;
-       
+    .nav_enlaces2 {
+        display: flex;
+
     }
 
-    .nav_enlace{
+    .nav_enlace {
         width: 100%;
         border-bottom: 1px solid var(--nav_color_enlaces);
     }
 
-    .hamburguesa{
+    .hamburguesa {
         display: block;
     }
-    
+
 
 
 
